--- a/Test-Meetup.ipynb
+++ b/Test-Meetup.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -164,7 +164,7 @@
    "outputs": [],
    "source": [
     "def main():\n",
-    "    cities =[(\"San Francisco\",\"CA\"),(\"New Haven\",\"CT\"),(\"Chicago\",\"IL\"),(\"New York\",\"NY\"),(\"Seattle\",\"WA\")]\n",
+    "    cities =[(\"Seattle\",\"WA\"),(\"Boston\", \"MA\"),(\"San Jose\", \"CA\"),(\"Los Angeles\",\"CA\"),(\"Denver\",\"CO\"),(\"Houston\",\"TX\"),(\"Portland\",\"OR\"),(\"Atlanta\",\"GA\"),(\"San Francisco\",\"CA\"),(\"New Haven\",\"CT\"),(\"Chicago\",\"IL\"),(\"New York\",\"NY\"),]    \n",
     "    api_key= \"53747843757c2c115136274431417e9\"\n",
     "    dump =[]\n",
     "    city_response = []\n",
@@ -174,12 +174,7 @@
     "        results_we_got = per_page\n",
     "        response=get_results({\"sign\":\"true\",\"country\":\"US\", \"city\":city, \"state\":state, \"radius\": 10, \\\n",
     "                              \"key\":api_key, \"page\":per_page, \"offset\":offset })\n",
-    "        city_response.append(response)\n",
-    "        offset += 1\n",
-    "#             dump.append(response)\n",
-    "        results_we_got = response['meta']['count']\n",
-    "        return (response['results'])\n",
-    "\n",
+    "        return response['results']\n",
     "\n",
     "        \n",
     "\n",
@@ -197,13 +192,345 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "response = json.loads(json.dumps(response))"
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i,item in enumerate(response):\n",
+    "    print (i)\n",
+    "    json.dumps(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "json.dumps(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{u'category': {u'id': 34, u'name': u'tech', u'shortname': u'tech'},\n",
+       "  u'city': u'Seattle',\n",
+       "  u'country': u'US',\n",
+       "  u'created': 1034097731000,\n",
+       "  u'description': u'<p>Seattle Weblog folks meet to talk about blogs and related topics.</p>',\n",
+       "  u'group_photo': {u'base_url': u'http://photos3.meetupstatic.com',\n",
+       "   u'highres_link': u'http://photos3.meetupstatic.com/photos/event/5/1/5/7/highres_20823.jpeg',\n",
+       "   u'photo_id': 20823,\n",
+       "   u'photo_link': u'http://photos3.meetupstatic.com/photos/event/5/1/5/7/600_20823.jpeg',\n",
+       "   u'thumb_link': u'http://photos3.meetupstatic.com/photos/event/5/1/5/7/thumb_20823.jpeg',\n",
+       "   u'type': u'event'},\n",
+       "  u'id': 21569,\n",
+       "  u'join_mode': u'open',\n",
+       "  u'lat': 47.61000061035156,\n",
+       "  u'link': u'https://www.meetup.com/blog-1/',\n",
+       "  u'lon': -122.33000183105469,\n",
+       "  u'members': 230,\n",
+       "  u'name': u'The Seattle Weblogger Meetup Group',\n",
+       "  u'organizer': {u'member_id': 710579,\n",
+       "   u'name': u'Jason Truesdell',\n",
+       "   u'photo': {u'base_url': u'http://photos4.meetupstatic.com',\n",
+       "    u'highres_link': u'http://photos2.meetupstatic.com/photos/member/8/2/7/e/highres_213406.jpeg',\n",
+       "    u'photo_id': 213406,\n",
+       "    u'photo_link': u'http://photos2.meetupstatic.com/photos/member/8/2/7/e/member_213406.jpeg',\n",
+       "    u'thumb_link': u'http://photos4.meetupstatic.com/photos/member/8/2/7/e/thumb_213406.jpeg',\n",
+       "    u'type': u'member'}},\n",
+       "  u'rating': 4.35,\n",
+       "  u'state': u'WA',\n",
+       "  u'timezone': u'US/Pacific',\n",
+       "  u'topics': [{u'id': 10037,\n",
+       "    u'name': u'Cityblogging',\n",
+       "    u'urlkey': u'cityblogging'},\n",
+       "   {u'id': 44508, u'name': u'Blogging', u'urlkey': u'blogs'}],\n",
+       "  u'urlname': u'blog-1',\n",
+       "  u'utc_offset': -28800000,\n",
+       "  u'visibility': u'public',\n",
+       "  u'who': u'bloggers'},\n",
+       " {u'category': {u'id': 11, u'name': u'games', u'shortname': u'games'},\n",
+       "  u'city': u'Seattle',\n",
+       "  u'country': u'US',\n",
+       "  u'created': 1034097731000,\n",
+       "  u'description': u\"Need more Scrabble\\xae in your life?  None of your friends will play with you because they know what'll happen?  Well, then, you've found the right place!  We offer (or at least refer to) three events a week:\\r\\nThird Place Books EVERY Sunday at 2PM (unless otherwise noted)\\r\\nUniversity Friends Ctr Tuesday at 6PM\\r\\nElysian Brewing Co at 13th & Pike Wednesdays at 7 or so PM  (This session is dormant as far as I know.)\\r\\nFor more info on the Tuesday session:  www.seattlescrabble.org\\r\\nWant to start another gathering on your side of town?  Just let me know!\",\n",
+       "  u'group_photo': {u'base_url': u'http://photos3.meetupstatic.com',\n",
+       "   u'highres_link': u'http://photos3.meetupstatic.com/photos/event/2/a/b/5/highres_370933.jpeg',\n",
+       "   u'photo_id': 370933,\n",
+       "   u'photo_link': u'http://photos3.meetupstatic.com/photos/event/2/a/b/5/600_370933.jpeg',\n",
+       "   u'thumb_link': u'http://photos3.meetupstatic.com/photos/event/2/a/b/5/thumb_370933.jpeg',\n",
+       "   u'type': u'event'},\n",
+       "  u'id': 138332,\n",
+       "  u'join_mode': u'open',\n",
+       "  u'lat': 47.61000061035156,\n",
+       "  u'link': u'https://www.meetup.com/scrabble-62/',\n",
+       "  u'lon': -122.33000183105469,\n",
+       "  u'members': 300,\n",
+       "  u'name': u'The Seattle Scrabble Meetup Group',\n",
+       "  u'organizer': {u'member_id': 550570,\n",
+       "   u'name': u'Dan Goodwin',\n",
+       "   u'photo': {u'base_url': u'http://photos4.meetupstatic.com',\n",
+       "    u'highres_link': u'http://photos4.meetupstatic.com/photos/member/a/1/2/8/highres_1901256.jpeg',\n",
+       "    u'photo_id': 1901256,\n",
+       "    u'photo_link': u'http://photos2.meetupstatic.com/photos/member/a/1/2/8/member_1901256.jpeg',\n",
+       "    u'thumb_link': u'http://photos4.meetupstatic.com/photos/member/a/1/2/8/thumb_1901256.jpeg',\n",
+       "    u'type': u'member'}},\n",
+       "  u'rating': 3.96,\n",
+       "  u'state': u'WA',\n",
+       "  u'timezone': u'US/Pacific',\n",
+       "  u'topics': [{u'id': 256, u'name': u'Scrabble', u'urlkey': u'scrabble'}],\n",
+       "  u'urlname': u'scrabble-62',\n",
+       "  u'utc_offset': -28800000,\n",
+       "  u'visibility': u'public',\n",
+       "  u'who': u'Scrabble Players'},\n",
+       " {u'category': {u'id': 2,\n",
+       "   u'name': u'career/business',\n",
+       "   u'shortname': u'career-business'},\n",
+       "  u'city': u'Seattle',\n",
+       "  u'country': u'US',\n",
+       "  u'created': 1034097732000,\n",
+       "  u'description': u'<p><span>Entrepreneurs, startups, developers, investors, marketers, and others join</span> <strong>Seattle</strong> <strong>Entrepreneurs</strong> for opportunities to meet, learn, and connect. Our events help launch new businesses and grow to the next stage and beyond, with our panelist experts and speakers and high-value events. We provide that \\'next step\\' in moving you forward.</p>\\n<p>Join us here and also join us <a href=\"http://www.facebook.com/SeattleStartups\">on Facebook</a>, <a href=\"https://www.linkedin.com/groups?home=&amp;gid=4409844\">on LinkedIn</a>, and <a href=\"http://twitter.com/SeattleEntrep\">on Twitter</a>.</p>\\n<p>* Have a company to promote? Become a sponsor of Seattle Entrepreneurs. Gain exposure here and at our events (<a href=\"http://www.meetup.com/entrepreneurs/suggestion/\">contact us</a>).</p>\\n<p><em>All proceeds go toward Global Music Project, a non-profit organization, whose mission is to help others make a difference through the power of music (<a class=\"linkified\" href=\"http://globalmusicproject.org\">http://globalmusicproject.org</a>).</em></p>',\n",
+       "  u'group_photo': {u'base_url': u'http://photos1.meetupstatic.com',\n",
+       "   u'highres_link': u'http://photos1.meetupstatic.com/photos/event/1/8/c/f/highres_449766351.jpeg',\n",
+       "   u'photo_id': 449766351,\n",
+       "   u'photo_link': u'http://photos1.meetupstatic.com/photos/event/1/8/c/f/600_449766351.jpeg',\n",
+       "   u'thumb_link': u'http://photos1.meetupstatic.com/photos/event/1/8/c/f/thumb_449766351.jpeg',\n",
+       "   u'type': u'event'},\n",
+       "  u'id': 54663,\n",
+       "  u'join_mode': u'open',\n",
+       "  u'lat': 47.61000061035156,\n",
+       "  u'link': u'https://www.meetup.com/entrepreneurs/',\n",
+       "  u'lon': -122.33000183105469,\n",
+       "  u'members': 4737,\n",
+       "  u'name': u'Seattle Entrepreneurs',\n",
+       "  u'organizer': {u'member_id': 675791,\n",
+       "   u'name': u'Peter Fosso',\n",
+       "   u'photo': {u'base_url': u'http://photos2.meetupstatic.com',\n",
+       "    u'highres_link': u'http://photos2.meetupstatic.com/photos/member/e/7/9/0/highres_263819280.jpeg',\n",
+       "    u'photo_id': 263819280,\n",
+       "    u'photo_link': u'http://photos4.meetupstatic.com/photos/member/e/7/9/0/member_263819280.jpeg',\n",
+       "    u'thumb_link': u'http://photos2.meetupstatic.com/photos/member/e/7/9/0/thumb_263819280.jpeg',\n",
+       "    u'type': u'member'}},\n",
+       "  u'rating': 4.35,\n",
+       "  u'state': u'WA',\n",
+       "  u'timezone': u'US/Pacific',\n",
+       "  u'topics': [{u'id': 389, u'name': u'Small Business', u'urlkey': u'smallbiz'},\n",
+       "   {u'id': 1238, u'name': u'Marketing', u'urlkey': u'marketing'},\n",
+       "   {u'id': 1330, u'name': u'E-Business Owners', u'urlkey': u'ebizowners'},\n",
+       "   {u'id': 15497,\n",
+       "    u'name': u'Women Entrepreneurs',\n",
+       "    u'urlkey': u'women-entrepreneurs'},\n",
+       "   {u'id': 15720,\n",
+       "    u'name': u'Professional Networking',\n",
+       "    u'urlkey': u'professional-networking'},\n",
+       "   {u'id': 17635,\n",
+       "    u'name': u'Business Strategy',\n",
+       "    u'urlkey': u'business-strategy'},\n",
+       "   {u'id': 19882,\n",
+       "    u'name': u'Entrepreneurship',\n",
+       "    u'urlkey': u'entrepreneurship'},\n",
+       "   {u'id': 21681,\n",
+       "    u'name': u'Startup Businesses',\n",
+       "    u'urlkey': u'startup-businesses'},\n",
+       "   {u'id': 128595,\n",
+       "    u'name': u'Internet Startups',\n",
+       "    u'urlkey': u'internet-startups'}],\n",
+       "  u'urlname': u'entrepreneurs',\n",
+       "  u'utc_offset': -28800000,\n",
+       "  u'visibility': u'public',\n",
+       "  u'who': u'Entrepreneurs'},\n",
+       " {u'category': {u'id': 22,\n",
+       "   u'name': u'new age/spirituality',\n",
+       "   u'shortname': u'new-age-spirituality'},\n",
+       "  u'city': u'Seattle',\n",
+       "  u'country': u'US',\n",
+       "  u'created': 1034097743000,\n",
+       "  u'description': u'<p>Open Witches group meeting for friendship and fun. We have a monthly Coffee Social and we also post events put on by other groups to help spread the word. If you would like to post your event please contact Stratyllis. Bright Blessings!</p>',\n",
+       "  u'group_photo': {u'base_url': u'http://photos3.meetupstatic.com',\n",
+       "   u'highres_link': u'http://photos3.meetupstatic.com/photos/event/3/0/9/9/highres_12732441.jpeg',\n",
+       "   u'photo_id': 12732441,\n",
+       "   u'photo_link': u'http://photos3.meetupstatic.com/photos/event/3/0/9/9/600_12732441.jpeg',\n",
+       "   u'thumb_link': u'http://photos3.meetupstatic.com/photos/event/3/0/9/9/thumb_12732441.jpeg',\n",
+       "   u'type': u'event'},\n",
+       "  u'id': 166611,\n",
+       "  u'join_mode': u'approval',\n",
+       "  u'lat': 47.61000061035156,\n",
+       "  u'link': u'https://www.meetup.com/seattle-witches/',\n",
+       "  u'lon': -122.33000183105469,\n",
+       "  u'members': 1002,\n",
+       "  u'name': u'The Greater Seattle Witches Meetup Group',\n",
+       "  u'organizer': {u'member_id': 2329860,\n",
+       "   u'name': u'Stratyllis',\n",
+       "   u'photo': {u'base_url': u'http://photos3.meetupstatic.com',\n",
+       "    u'highres_link': u'http://photos3.meetupstatic.com/photos/member/5/5/6/6/highres_801862.jpeg',\n",
+       "    u'photo_id': 801862,\n",
+       "    u'photo_link': u'http://photos3.meetupstatic.com/photos/member/5/5/6/6/member_801862.jpeg',\n",
+       "    u'thumb_link': u'http://photos3.meetupstatic.com/photos/member/5/5/6/6/thumb_801862.jpeg',\n",
+       "    u'type': u'member'}},\n",
+       "  u'rating': 4.58,\n",
+       "  u'state': u'WA',\n",
+       "  u'timezone': u'US/Pacific',\n",
+       "  u'topics': [{u'id': 303, u'name': u'Witches', u'urlkey': u'witches'},\n",
+       "   {u'id': 486, u'name': u'Pagan', u'urlkey': u'pagan'},\n",
+       "   {u'id': 3862, u'name': u'Wiccan', u'urlkey': u'wiccan'},\n",
+       "   {u'id': 17252, u'name': u'Magick', u'urlkey': u'magick'}],\n",
+       "  u'urlname': u'seattle-witches',\n",
+       "  u'utc_offset': -28800000,\n",
+       "  u'visibility': u'public_limited',\n",
+       "  u'who': u'Witch, Pagan, Friend'},\n",
+       " {u'category': {u'id': 11, u'name': u'games', u'shortname': u'games'},\n",
+       "  u'city': u'Seattle',\n",
+       "  u'country': u'US',\n",
+       "  u'created': 1034097745000,\n",
+       "  u'description': u\"<p>This is a group for anyone who wants to play, talk about, or learn about Dungeons &amp; Dragons in the Puget Sound area. We have multiple events occurring monthly where anyone interested in learning about or playing Dungeons and Dragons or any other similar role-playing games, like Pathfinder or 13th Age, can find other interested people for one-time events or ongoing groups. &nbsp;We offer events for conventions, comic book and games stores and play in people's homes. &nbsp;We are always looking to bring new people into the game and particularly want to encourage those who take the plunge to become a Dungeon (Game) Masters and run their owns games!</p>\",\n",
+       "  u'group_photo': {u'base_url': u'http://photos3.meetupstatic.com',\n",
+       "   u'highres_link': u'http://photos3.meetupstatic.com/photos/event/7/7/d/0/highres_323970672.jpeg',\n",
+       "   u'photo_id': 323970672,\n",
+       "   u'photo_link': u'http://photos3.meetupstatic.com/photos/event/7/7/d/0/600_323970672.jpeg',\n",
+       "   u'thumb_link': u'http://photos3.meetupstatic.com/photos/event/7/7/d/0/thumb_323970672.jpeg',\n",
+       "   u'type': u'event'},\n",
+       "  u'id': 47162,\n",
+       "  u'join_mode': u'open',\n",
+       "  u'lat': 47.61000061035156,\n",
+       "  u'link': u'https://www.meetup.com/Seattle-Dungeons-and-Dragons/',\n",
+       "  u'lon': -122.30000305175781,\n",
+       "  u'members': 2494,\n",
+       "  u'name': u'The Seattle Dungeons & Dragons Meetup Group',\n",
+       "  u'organizer': {u'member_id': 3583240,\n",
+       "   u'name': u'Rob Dorgan',\n",
+       "   u'photo': {u'base_url': u'http://photos2.meetupstatic.com',\n",
+       "    u'highres_link': u'http://photos4.meetupstatic.com/photos/member/5/4/0/8/highres_160581512.jpeg',\n",
+       "    u'photo_id': 160581512,\n",
+       "    u'photo_link': u'http://photos2.meetupstatic.com/photos/member/5/4/0/8/member_160581512.jpeg',\n",
+       "    u'thumb_link': u'http://photos2.meetupstatic.com/photos/member/5/4/0/8/thumb_160581512.jpeg',\n",
+       "    u'type': u'member'}},\n",
+       "  u'rating': 4.57,\n",
+       "  u'state': u'WA',\n",
+       "  u'timezone': u'US/Pacific',\n",
+       "  u'topics': [{u'id': 553, u'name': u'Dungeons & Dragons', u'urlkey': u'dnd'},\n",
+       "   {u'id': 10051, u'name': u'D20 Gaming', u'urlkey': u'd20'},\n",
+       "   {u'id': 16425,\n",
+       "    u'name': u'Roleplaying Games (RPGs)',\n",
+       "    u'urlkey': u'roleplaying-games-rpgs'}],\n",
+       "  u'urlname': u'Seattle-Dungeons-and-Dragons',\n",
+       "  u'utc_offset': -28800000,\n",
+       "  u'visibility': u'public',\n",
+       "  u'who': u'D&D Players'}]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json.loads(json.dumps(response))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(response) == dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(json.dumps(response[0]))"
    ]
   },
   {
