--- a/4.DataVisualization/TimeSeriesTopicsDF.ipynb
+++ b/4.DataVisualization/TimeSeriesTopicsDF.ipynb
@@ -2,13 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    },
+    {
+     "ename": "IOError",
+     "evalue": "[Errno 2] No such file or directory: 'plotlyCred.yml'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIOError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-90c295309773>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0myaml\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0mcredentials\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0myaml\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexpanduser\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'plotlyCred.yml'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0mplotly\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtools\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_credentials_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcredentials\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'username'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mapi_key\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcredentials\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'api_key'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIOError\u001b[0m: [Errno 2] No such file or directory: 'plotlyCred.yml'"
+     ]
+    }
+   ],
    "source": [
     "%pylab inline\n",
     "import networkx as nx\n",
@@ -30,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -55,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -68,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -83,11 +102,11 @@
       "+--------+---------+-------------+--------------------+----------+\n",
       "|group_id| event_id|   event_time|               topic|group_city|\n",
       "+--------+---------+-------------+--------------------+----------+\n",
-      "|18717087|238024816|1494437400000|communication skills|    London|\n",
-      "|18628440|237343136|1488299400000|       microservices| Bucharest|\n",
-      "| 1563505|238023271|1488434400000|         new in town|     Paris|\n",
-      "| 2849712|238010279|1489201200000|         sport bikes|    Corona|\n",
-      "|19091202|238024817|1488477600000|  startup businesses|     Paris|\n",
+      "|18717087|238024816|1494437400000|Communication Skills|    London|\n",
+      "|18628440|237343136|1488299400000|       Microservices| Bucharest|\n",
+      "| 1563505|238023271|1488434400000|         New In Town|     Paris|\n",
+      "| 2849712|238010279|1489201200000|         Sport Bikes|    Corona|\n",
+      "|19091202|238024817|1488477600000|  Startup Businesses|     Paris|\n",
       "+--------+---------+-------------+--------------------+----------+\n",
       "only showing top 5 rows\n",
       "\n"
@@ -110,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -129,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -142,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -440,7 +459,7 @@
        "19  2017-03-08  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -464,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -482,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -516,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -539,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -550,13 +569,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chaudao19/43.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chaudao19/49.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,6 +590,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 40,
    "metadata": {
     "collapsed": false,
@@ -579,18 +607,124 @@
    },
    "outputs": [],
    "source": [
-    "def create_time_series_pd(df):\n",
-    "    topic_count = df.groupby('topic')['group_id'].count()\n",
-    "    topic_count = pd.DataFrame(topic_count)\n",
-    "    ordered_topic_count = topic_count.sort_values('group_id', ascending=False)\n",
-    "#     pop_topics_list = ordered_topic_count.index.values[:10].tolist()\n",
-    "    pop_topics_list = ['Tech','Data Science','Web Development','Python', 'Data Analytics','Spark','JavaScript','Hadoop']\n",
+    "# def create_time_series_pd(df):\n",
+    "#     topic_count = df.groupby('topic')['group_id'].count()\n",
+    "#     topic_count = pd.DataFrame(topic_count)\n",
+    "#     ordered_topic_count = topic_count.sort_values('group_id', ascending=False)\n",
+    "# #     pop_topics_list = ordered_topic_count.index.values[:10].tolist()\n",
+    "#     pop_topics_list = ['Tech','Data Science','Web Development','Python', 'Data Analytics','Spark','JavaScript','Hadoop']\n",
+    "#     new_topic_pd = df[['topic','date']]\n",
+    "#     topic_index = df['topic'].isin(pop_topics_list)\n",
+    "#     top_100_topic_pd = new_topic_pd[topic_index]\n",
+    "#     crosstab_topic_date = pd.crosstab(top_100_topic_pd['date'],top_100_topic_pd['topic'])\n",
+    "#     return crosstab_topic_date\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def timeseries_specific_topics(df,spec_topics):\n",
+    "#     topic_count = df.groupby('topic')['group_id'].count()\n",
+    "#     topic_count = pd.DataFrame(topic_count)\n",
+    "#     ordered_topic_count = topic_count.sort_values('group_id', ascending=False)\n",
     "    new_topic_pd = df[['topic','date']]\n",
-    "    topic_index = df['topic'].isin(pop_topics_list)\n",
+    "    topic_index = df['topic'].isin(spec_topics)\n",
     "    top_100_topic_pd = new_topic_pd[topic_index]\n",
     "    crosstab_topic_date = pd.crosstab(top_100_topic_pd['date'],top_100_topic_pd['topic'])\n",
-    "    return crosstab_topic_date\n"
+    "    return crosstab_topic_date"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "datascience = ['JavaScript','Data Science','Python',\\\n",
+    "               'Machine Learning','Data Analytics','Hadoop','Galvanize']\n",
+    "datasciencetopics = timeseries_specific_topics(urlkey_df,datascience)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chaudao19/61.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "py.iplot([{\n",
+    "    'x': datasciencetopics.index,\n",
+    "    'y': datasciencetopics[col],\n",
+    "    'name': col\n",
+    "}  for col in datasciencetopics.columns])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
