--- a/4.DataVisualization/networkgraph-techtopics.ipynb
+++ b/4.DataVisualization/networkgraph-techtopics.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -55,25 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chaudao19/41.embed\" height=\"525\" width=\"100%\"></iframe>'"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "tls.get_embed('https://plot.ly/~chaudao19/41')"
+    "# tls.get_embed('https://plot.ly/~chaudao19/61')"
    ]
   },
   {
@@ -380,67 +369,6 @@
     "                yaxis=YAxis(showgrid=False, zeroline=False, showticklabels=True)))\n",
     "\n",
     "py.iplot(fig, filename='TechTopics')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chaudao19/15.embed\" height=\"650px\" width=\"650px\"></iframe>"
-      ],
-      "text/plain": [
-       "<plotly.tools.PlotlyDisplay object>"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fig = Figure(data=Data([edge_trace, node_trace]),\n",
-    "             layout=Layout(\n",
-    "                title='<br>Network graph made with Python',\n",
-    "                titlefont=dict(size=16),\n",
-    "                showlegend=True, \n",
-    "                width=650,\n",
-    "                height=650,\n",
-    "                hovermode='closest',\n",
-    "                margin=dict(b=20,l=5,r=5,t=40),\n",
-    "                annotations=[ dict(\n",
-    "                    text=\"Python code: <a href='https://plot.ly/ipython-notebooks/network-graphs/'> https://plot.ly/ipython-notebooks/network-graphs/</a>\",\n",
-    "                    showarrow=False,\n",
-    "                    xref=\"paper\", yref=\"paper\",\n",
-    "                    x=0.005, y=-0.002 ) ],\n",
-    "                xaxis=XAxis(showgrid=False, zeroline=False, showticklabels=True),\n",
-    "                yaxis=YAxis(showgrid=False, zeroline=False, showticklabels=True)))\n",
-    "\n",
-    "py.iplot(fig, filename='networkx')"
    ]
   },
   {
