--- a/4.DataVisualization/TimeSeriesTopicsDF.ipynb
+++ b/4.DataVisualization/TimeSeriesTopicsDF.ipynb
@@ -680,314 +680,25 @@
     "    'name': col\n",
     "}  for col in datasciencetopics.columns])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2132034"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(urlkey_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "ts_bycat = create_time_series_pd(urlkey_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>topic</th>\n",
-       "      <th>Data Analytics</th>\n",
-       "      <th>Data Science</th>\n",
-       "      <th>Hadoop</th>\n",
-       "      <th>JavaScript</th>\n",
-       "      <th>Python</th>\n",
-       "      <th>Web Development</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2017-02-23</th>\n",
-       "      <td>76</td>\n",
-       "      <td>52</td>\n",
-       "      <td>44</td>\n",
-       "      <td>101</td>\n",
-       "      <td>40</td>\n",
-       "      <td>269</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-02-24</th>\n",
-       "      <td>53</td>\n",
-       "      <td>43</td>\n",
-       "      <td>39</td>\n",
-       "      <td>91</td>\n",
-       "      <td>57</td>\n",
-       "      <td>211</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-02-25</th>\n",
-       "      <td>55</td>\n",
-       "      <td>45</td>\n",
-       "      <td>33</td>\n",
-       "      <td>73</td>\n",
-       "      <td>47</td>\n",
-       "      <td>169</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-02-26</th>\n",
-       "      <td>21</td>\n",
-       "      <td>8</td>\n",
-       "      <td>33</td>\n",
-       "      <td>35</td>\n",
-       "      <td>19</td>\n",
-       "      <td>63</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-02-27</th>\n",
-       "      <td>32</td>\n",
-       "      <td>21</td>\n",
-       "      <td>35</td>\n",
-       "      <td>52</td>\n",
-       "      <td>19</td>\n",
-       "      <td>128</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "topic       Data Analytics  Data Science  Hadoop  JavaScript  Python  \\\n",
-       "date                                                                   \n",
-       "2017-02-23              76            52      44         101      40   \n",
-       "2017-02-24              53            43      39          91      57   \n",
-       "2017-02-25              55            45      33          73      47   \n",
-       "2017-02-26              21             8      33          35      19   \n",
-       "2017-02-27              32            21      35          52      19   \n",
-       "\n",
-       "topic       Web Development  \n",
-       "date                         \n",
-       "2017-02-23              269  \n",
-       "2017-02-24              211  \n",
-       "2017-02-25              169  \n",
-       "2017-02-26               63  \n",
-       "2017-02-27              128  "
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ts_bycat.head(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chaudao19/45.embed\" height=\"525px\" width=\"100%\"></iframe>"
-      ],
-      "text/plain": [
-       "<plotly.tools.PlotlyDisplay object>"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "py.iplot([{\n",
-    "    'x': sf_timeseries.index,\n",
-    "    'y': sf_timeseries[col],\n",
-    "    'name': col\n",
-    "}  for col in sf_timeseries.columns])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chaudao19/41.embed\" height=\"525px\" width=\"100%\"></iframe>"
-      ],
-      "text/plain": [
-       "<plotly.tools.PlotlyDisplay object>"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "py.iplot([{\n",
-    "    'x': ts_bycat.index,\n",
-    "    'y': ts_bycat[col],\n",
-    "    'name': col\n",
-    "}  for col in ts_bycat.columns])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
