--- a/Overall.ipynb
+++ b/Overall.ipynb
@@ -7,7 +7,7 @@
     "                                 Data Engineer Final Project \n",
     "----\n",
     "\n",
-    "<center><img src=\"https://dzpp79ucibp5a.cloudfront.net/events_banners/12768_normal_1403512002_api-meetup-logo-600x200.png\" height=\"500\"/></center>"
+    "<center><img src=\"https://dzpp79ucibp5a.cloudfront.net/events_banners/12768_normal_1403512002_api-meetup-logo-600x200.png\" ></center>"
    ]
   },
   {
