--- a/README.ipynb
+++ b/README.ipynb
@@ -21,8 +21,8 @@
     "                                \n",
     "----\n",
     "\n",
-    "<center><img src=\"https://thumbs.dreamstime.com/t/summary-concept-business-image-hand-holding-marker-write-isolated-white-49048467.jpg\n",
-    "\" height=\"500\"/></center>\n",
+    "<img src=\"https://thumbs.dreamstime.com/t/summary-concept-business-image-hand-holding-marker-write-isolated-white-49048467.jpg\n",
+    "\" height=\"500\"/>\n",
     "\n",
     "-----\n",
     "- Overall understanding dynamic of each city/country\n",
@@ -42,7 +42,7 @@
     "# Data Architecture\n",
     "-----\n",
     "\n",
-    "<center><img src=\"./Images/Diagram.png\" height=\"500\"/></center>\n",
+    "<img src=\"./Images/Diagram.png\" height=\"500\"/>\n",
     "\n",
     "\n",
     "\n"
@@ -54,10 +54,10 @@
    "source": [
     "# MOST ACTIVE CITIES - NO SAN FRANCISCO ? \n",
     "\n",
-    "<center><img src=\"http://cdn2.hubspot.net/hubfs/897/blog-files/3SurprisingFactsBlog.jpg?t=1465311511250\" height=\"500\"/></center>\n",
+    "<img src=\"http://cdn2.hubspot.net/hubfs/897/blog-files/3SurprisingFactsBlog.jpg?t=1465311511250\" height=\"500\"/>\n",
     "\n",
     "\n",
-    "<center><img src=\"./Images/cities.png\" height=\"100\"/></center>\n"
+    "<img src=\"./Images/cities.png\" height=\"100\"/>\n"
    ]
   },
   {
@@ -69,19 +69,19 @@
     "\n",
     "Groups \n",
     "----\n",
-    "<center><img src=\"./Images/groups.png\" height=\"200\"/></center>\n",
+    "<img src=\"./Images/groups.png\" height=\"200\"/>\n",
     "\n",
     "Event\n",
     "----\n",
-    "<center><img src=\"./Images/event.png\" height=\"200\"/></center>\n",
+    "<img src=\"./Images/event.png\" height=\"200\"/>\n",
     "\n",
     "Topic\n",
     "----\n",
-    "<center><img src=\"./Images/topics.png\" height=\"200\"/></center>\n",
+    "<img src=\"./Images/topics.png\" height=\"200\"/>\n",
     "\n",
     "RSVP\n",
     "----\n",
-    "<center><img src=\"./Images/rsvp.png\" height=\"200\"/></center>\n",
+    "<img src=\"./Images/rsvp.png\" height=\"200\"/>\n",
     "\n",
     "\n"
    ]
@@ -97,15 +97,15 @@
     "\n",
     "# <center> MOST PAINFUL DATAFRAMES <center>\n",
     "----\n",
-    "<center><img src=\"http://www.demeterclarc.com/wp-content/uploads/images/2013/07/ENOUGH-BUTT-PAIN.png\" height=\"200\"/></center>\n",
+    "<img src=\"http://www.demeterclarc.com/wp-content/uploads/images/2013/07/ENOUGH-BUTT-PAIN.png\" height=\"200\"/>\n",
     "\n",
     "Groups - Category - Topics \n",
     "----\n",
-    "<center><img src=\"./Images/category-topic.png\" height=\"200\"/></center>\n",
+    "<img src=\"./Images/category-topic.png\" height=\"200\"/>\n",
     "\n",
     "Event - Topics \n",
     "----\n",
-    "<center><img src=\"./Images/urlkey.png\" height=\"200\"/></center>\n"
+    "<img src=\"./Images/urlkey.png\" height=\"200\"/>"
    ]
   },
   {
@@ -124,7 +124,7 @@
    "metadata": {},
    "source": [
     "# <center> In case the link does work <center> \n",
-    "<center><img src=\"http://www.amandavyne.com/wp-content/uploads/2013/06/12345.jpeg\" height=\"200\"/></center>"
+    "<img src=\"http://www.amandavyne.com/wp-content/uploads/2013/06/12345.jpeg\" height=\"200\"/>"
    ]
   },
   {
@@ -137,7 +137,7 @@
    "source": [
     "#  <center> Category Distribution - San Francisco <center>\n",
     "---\n",
-    "<center><img src=\"./Images/categorydist.png\" height=\"200\"/></center>\n",
+    "<img src=\"./Images/categorydist.png\" height=\"200\"/>\n",
     "\n"
    ]
   },
@@ -147,14 +147,14 @@
    "source": [
     "#  <center> TIME SERIES <center>\n",
     "---\n",
-    "<center><h3> Top Trending Topics -  San Francisco </h3><center>\n",
-    "<center><img src=\"./Images/poptrendsf1.png\" height=\"200\"/></center>\n",
-    "<center><img src=\"./Images/poptrendsf2.png\" height=\"200\"/></center>\n",
-    "<center><h3> DataScience Topics - San Francisco </h3><center>\n",
-    "<center><img src=\"./Images/dstopic1.png\" height=\"200\"/></center>\n",
-    "<center><img src=\"./Images/dstopic2.png\" height=\"200\"/></center>\n",
-    "<center><h3> Labled-Category Groups </h3><center>\n",
-    "<center><img src=\"./Images/labledts.png\" height=\"200\"/></center>\n",
+    "<h3> Top Trending Topics -  San Francisco </h3>\n",
+    "<img src=\"./Images/poptrendsf1.png\" height=\"200\"/>\n",
+    "<img src=\"./Images/poptrendsf2.png\" height=\"200\"/>\n",
+    "<h3> DataScience Topics - San Francisco </h3>\n",
+    "<img src=\"./Images/dstopic1.png\" height=\"200\"/>\n",
+    "<img src=\"./Images/dstopic2.png\" height=\"200\"/>\n",
+    "<h3> Labled-Category Groups </h3><center>\n",
+    "<img src=\"./Images/labledts.png\" height=\"200\"/>\n",
     "\n"
    ]
   },
@@ -179,7 +179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img src=\"./Images/question.png\" height=\"200\"/></center>"
+    "<img src=\"./Images/question.png\" height=\"200\"/>"
    ]
   },
   {
